[package]
name = "advent-of-code-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smallvec = "1.11"
num-integer = { version = "0.1", default-features = false }

[profile.release-with-debug]
inherits = "release"
debug = true
